<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_centerVertical="true"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/logInTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_login"
        android:textSize="24sp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/label_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dip"
        android:text="@string/username" />

    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions"
        android:padding="8dip"
        android:singleLine="true" />

    <TextView
        android:id="@+id/label_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dip"
        android:text="@string/password" />

    <EditText
        android:id="@+id/first_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:padding="8dip"
        android:singleLine="true" />

    <Button
        android:id="@+id/submit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#009688"
        android:text="@string/submitLogIn" />

    <TextView
        android:id="@+id/signInLink"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:linksClickable="false"
        android:onClick="TODO"
        android:paddingTop="4dip"
        android:gravity="center"
        android:text="@string/noAccount" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="?android:attr/listDivider" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        app:srcCompat="@drawable/login" />

</LinearLayout>